# libksr

./: .drone.yml  .gitignore  LICENSE  README.md  gcovr.cfg  meson.build
include/ksr/: arrays.h  buffers.h  errors.h  files.h  logging.h  promises.h  regex.h  string.h
src/: arrays.c  buffers.c  files.c  promises.c  regex.c  string.c
tests/: ksrarrays.c  ksrbuffers.c  ksregex.c  ksrerrors.c  ksrfiles.c  ksrlogging.c  ksrpromises.c  ksrstring.c
